# crud-example

./: docker-compose.yml  pyproject.toml
backend/: crud.py  router.py
