[tool.poetry]
name = "crud-example"
version = "0.1.0"
description = ""
authors = ["Alan Lanceloth Rodrigues Silva <alan.lanceloth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ignr = "^2.2"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
duckdb = "^0.10.1"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.5"
pymdown-extensions = "^10.7"
mkdocs-bootstrap386 = "^0.0.2"
pytest = "^8.1.1"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
